Fix Networking Website Issues

--- a/blogs.html
+++ b/blogs.html
@@ -27,20 +27,20 @@
                     <li><a href="/blogs.html" class="nav-link active">Blogs</a></li>
                     <li class="dropdown">
                         <a href="#" class="nav-link dropdown-toggle">Tools</a>
-                        <ul class="dropdown-content">
+                        <div class="dropdown-content">
                             <li><a href="/tests.html" class="dropdown-link">Tests</a></li>
                             <li><a href="/ascalc.html" class="dropdown-link">AS Calculator</a></li>
                             <li><a href="/ip_address.html" class="dropdown-link">IP Calculator</a></li>
-                        </ul>
+                        </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="nav-link dropdown-toggle">Labs</a>
-                        <ul class="dropdown-content">
+                        <div class="dropdown-content">
                             <li><a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a></li>
                             <li><a href="/labs/ospf.html" class="dropdown-link">OSPF</a></li>
                             <li><a href="/labs/rip.html" class="dropdown-link">RIP</a></li>
                             <li><a href="/labs/bgp.html" class="dropdown-link">BGP</a></li>
-                        </ul>
+                        </div>
                     </li>
                 </ul>
                 <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
