Fix navigation bar functionality and layout issues

--- a/blogs.html
+++ b/blogs.html
@@ -28,18 +28,18 @@
                     <li class="dropdown">
                         <a href="#" class="nav-link dropdown-toggle">Tools</a>
                         <div class="dropdown-content">
-                            <li><a href="/tests.html" class="dropdown-link">Tests</a></li>
-                            <li><a href="/ascalc.html" class="dropdown-link">AS Calculator</a></li>
-                            <li><a href="/ip_address.html" class="dropdown-link">IP Calculator</a></li>
+                            <a href="/tests.html" class="dropdown-link">Tests</a>
+                            <a href="/ascalc.html" class="dropdown-link">AS Calculator</a>
+                            <a href="/ip_address.html" class="dropdown-link">IP Calculator</a>
                         </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="nav-link dropdown-toggle">Labs</a>
                         <div class="dropdown-content">
-                            <li><a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a></li>
-                            <li><a href="/labs/ospf.html" class="dropdown-link">OSPF</a></li>
-                            <li><a href="/labs/rip.html" class="dropdown-link">RIP</a></li>
-                            <li><a href="/labs/bgp.html" class="dropdown-link">BGP</a></li>
+                            <a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a>
+                            <a href="/labs/ospf.html" class="dropdown-link">OSPF</a>
+                            <a href="/labs/rip.html" class="dropdown-link">RIP</a>
+                            <a href="/labs/bgp.html" class="dropdown-link">BGP</a>
                         </div>
                     </li>
                 </ul>
