--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
                     <li><a href="/blogs.html" class="nav-link">Blogs</a></li>
                     <li class="dropdown">
                         <a href="#" class="nav-link">Tools</a>
-                        <ul class="dropdown-content">
-                            <li><a href="/tests.html" class="dropdown-link">Tests</a></li>
-                            <li><a href="/ascalc.html" class="dropdown-link">AS Calculator</a></li>
-                            <li><a href="/ip_address.html" class="dropdown-link">IP Calculator</a></li>
-                        </ul>
+                        <div class="dropdown-content">
+                            <a href="/tests.html" class="dropdown-link">Tests</a>
+                            <a href="/ascalc.html" class="dropdown-link">AS Calculator</a>
+                            <a href="/ip_address.html" class="dropdown-link">IP Calculator</a>
+                        </div>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="nav-link">Labs</a>
-                        <ul class="dropdown-content">
-                            <li><a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a></li>
-                            <li><a href="/labs/ospf.html" class="dropdown-link">OSPF</a></li>
-                            <li><a href="/labs/rip.html" class="dropdown-link">RIP</a></li>
-                            <li><a href="/labs/bgp.html" class="dropdown-link">BGP</a></li>
-                        </ul>
+                        <div class="dropdown-content">
+                            <a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a>
+                            <a href="/labs/ospf.html" class="dropdown-link">OSPF</a>
+                            <a href="/labs/rip.html" class="dropdown-link">RIP</a>
+                            <a href="/labs/bgp.html" class="dropdown-link">BGP</a>
+                        </div>
                     </li>
                 </ul>
                 <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
