--- a/header.html
+++ b/header.html
@@ -1,32 +1,34 @@
-<div class="header-container">
-    <a href="/" class="logo">Networking Essentials</a>
-    <nav class="main-nav">
-        <button class="mobile-menu-toggle" aria-label="Toggle navigation menu">
+<header class="header">
+    <div class="header-container">
+        <a href="/" class="logo">Networking Essentials</a>
+        <button class="mobile-menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
             <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav-list">
-            <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="/blogs.html" class="nav-link">Blogs</a></li>
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle">Tools</a>
-                <ul class="dropdown-menu">
-                    <li><a href="/tests.html" class="dropdown-link">Tests</a></li>
-                    <li><a href="/ascalc.html" class="dropdown-link">AS Calculator</a></li>
-                    <li><a href="/ip_address.html" class="dropdown-link">IP Calculator</a></li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle">Labs</a>
-                <ul class="dropdown-menu">
-                    <li><a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a></li>
-                    <li><a href="/labs/ospf.html" class="dropdown-link">OSPF</a></li>
-                    <li><a href="/labs/rip.html" class="dropdown-link">RIP</a></li>
-                    <li><a href="/labs/bgp.html" class="dropdown-link">BGP</a></li>
-                </ul>
-            </li>
-        </ul>
-        <button class="theme-toggle" aria-label="Toggle dark mode">
-            <i class="fas fa-moon"></i>
-        </button>
-    </nav>
-</div>
+        <nav class="main-nav">
+            <ul class="nav-list">
+                <li><a href="/index.html" class="nav-link">Home</a></li>
+                <li><a href="/blogs.html" class="nav-link active">Blogs</a></li>
+                <li class="dropdown">
+                    <a href="#" class="nav-link dropdown-toggle">Tools</a>
+                    <ul class="dropdown-content">
+                        <li><a href="/tests.html" class="dropdown-link">Tests</a></li>
+                        <li><a href="/ascalc.html" class="dropdown-link">AS Calculator</a></li>
+                        <li><a href="/ip_address.html" class="dropdown-link">IP Calculator</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="nav-link dropdown-toggle">Labs</a>
+                    <ul class="dropdown-content">
+                        <li><a href="/labs/eigrp.html" class="dropdown-link">EIGRP</a></li>
+                        <li><a href="/labs/ospf.html" class="dropdown-link">OSPF</a></li>
+                        <li><a href="/labs/rip.html" class="dropdown-link">RIP</a></li>
+                        <li><a href="/labs/bgp.html" class="dropdown-link">BGP</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+                <i class="fas fa-moon"></i>
+            </button>
+        </nav>
+    </div>
+</header>
