--- a/demo/Subnetting.html
+++ b/demo/Subnetting.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="header-container">
@@ -49,7 +50,6 @@
         </div>
     </header>
 
-
     <!-- Header Ad Banner -->
     <div class="">
         <div class="">
@@ -59,7 +59,7 @@
     </div>
 
     <div class="main-container">
-        <main class="main-content">
+        <main >
             <article class="blog-article">
                 <header class="article-header">
                     <div class="article-meta">
@@ -267,7 +267,7 @@
             </article>
         </main>
 
-        <aside class="sidebar">
+        <aside >
             <!-- Sidebar Ad -->
             <div class="">
                 <div class="">
@@ -304,12 +304,11 @@
         </aside>
     </div>
 
+
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2025 Networking Essentials. All rights reserved. | Empowering network professionals worldwide</p>
         </div>
     </footer>
-
     <script src="../theme.js"></script>
 </body>
-</html>
