add ad script tag and nav fix

--- a/blogsPub/Top10CiscoIOSCommands.html
+++ b/blogsPub/Top10CiscoIOSCommands.html
@@ -624,8 +624,7 @@
                             Tools
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#tests">Tests</a></li>
-                            <li><a class="dropdown-item" href="#calculator">AS Calculator</a></li>
+                            <li><a class="dropdown-item" href="../tests.html">Tests</a></li>
                             <li><a class="dropdown-item" href="../ip_address.html">IP Calculator</a></li>
                         </ul>
                     </li>
@@ -919,9 +918,25 @@ Building configuration...
                                 </a>
                                 <div class="d-flex align-items-center">
                                     <span class="me-3">Share this article:</span>
-                                    <a href="#" class="share-button"><i class="fab fa-twitter"></i></a>
-                                    <a href="#" class="share-button"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#" class="share-button"><i class="fab fa-facebook"></i></a>
+                                    <!-- <a href="#" class="share-button"><i class="fab fa-twitter"></i></a> -->
+                                    <a href="https://twitter.com/intent/tweet?url=https://netest.in/blogsPub/Top10CiscoIOSCommands.html&text=Understanding%20Subnetting%20in%205%20Easy%20Steps" 
+                                        target="_blank" 
+                                        class="share-button" 
+                                        aria-label="Share on Twitter">
+                                            <i class="fab fa-twitter"></i>
+                                    </a>
+                                    <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://netest.in/blogsPub/Top10CiscoIOSCommands.html"
+                                        target="_blank"
+                                        class="share-button"
+                                        aria-label="Share on LinkedIn">
+                                            <i class="fab fa-linkedin"></i>
+                                    </a>
+                                    <a href="https://www.facebook.com/sharer/sharer.php?u=http://netest.in/blogsPub/Top10CiscoIOSCommands.html"
+                                        target="_blank"
+                                        class="share-button"
+                                        aria-label="Share on Facebook">
+                                            <i class="fab fa-facebook"></i>
+                                    </a>
                                 </div>
                             </div>
                         </footer>
