--- a/labs/ospf.html
+++ b/labs/ospf.html
@@ -24,7 +24,7 @@
     <meta name="author" content="Networking Hub">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../styles.css">
-    <script defer src="../theme.js"></script>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -44,8 +44,7 @@
                     <li class="dropdown">
                         <a href="#" class="nav-link dropdown-toggle">Tools</a>
                         <ul class="dropdown-content">
-                            <li><a href="/tests.html" class="dropdown-link">Tests</a></li>
-                            <li><a href="/ascalc.html" class="dropdown-link">AS Calculator</a></li>
+                            <li><a href="../tests.html" class="dropdown-link">Tests</a></li>
                             <li><a href="/ip_address.html" class="dropdown-link">IP Calculator</a></li>
                         </ul>
                     </li>
@@ -94,5 +93,8 @@
     <footer class="footer">
         <div class="footer-content">&copy; 2025 Networking Essentials. All rights reserved.</div>
     </footer>
+    <script defer src="../osfp.js"></script>
+    
+
 </body>
 </html>
